--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body": "^5.1.0",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "express-session": "^1.17.3",
+    "mysql": "^2.18.1",
+    "parser": "^0.1.4",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
