--- a/package.json
+++ b/package.json
@@ -1,43 +1,35 @@
 {
-  "name": "binotify-rest-service",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://gitlab.informatika.org/if3110-2022-k02-02-24/binotify-rest-service.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-<<<<<<< HEAD
-    "bcrypt": "^5.1.0",
-    "body": "^5.1.0",
-    "cookie": "^0.5.0",
-    "cookie-parser": "^1.4.6",
-=======
-    "body-parser": "^1.20.1",
->>>>>>> 635e6edcfe3f4284a45387048a8cb5c89b7c8778
-    "cors": "^2.8.5",
-    "easy-soap-request": "^5.2.0",
-    "express": "^4.18.2",
-<<<<<<< HEAD
-    "express-session": "^1.17.3",
-    "mysql": "^2.18.1",
-    "parser": "^0.1.4",
-    "session": "^0.1.0"
-=======
-    "mysql": "^2.18.1",
-    "xml2js": "^0.4.23"
->>>>>>> 635e6edcfe3f4284a45387048a8cb5c89b7c8778
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+    "name": "binotify-rest-service",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "dev": "nodemon server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://gitlab.informatika.org/if3110-2022-k02-02-24/binotify-rest-service.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.1.0",
+        "body": "^5.1.0",
+        "cookie": "^0.5.0",
+        "cookie-parser": "^1.4.6",
+        "body-parser": "^1.20.1",
+        "easy-soap-request": "^5.2.0",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "mysql": "^2.18.1",
+        "parser": "^0.1.4",
+        "session": "^0.1.0",
+        "xml2js": "^0.4.23"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.20"
+    }
 }
