--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "dependencies": {
         "bcrypt": "^5.1.0",
         "body": "^5.1.0",
+        "body-parser": "^1.20.1",
         "cookie": "^0.5.0",
         "cookie-parser": "^1.4.6",
-        "body-parser": "^1.20.1",
+        "cors": "^2.8.5",
         "easy-soap-request": "^5.2.0",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
         "parser": "^0.1.4",
         "session": "^0.1.0",
