--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cookie": "^0.5.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "easy-soap-request": "^5.2.0",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
