--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NODE_ENV=development
-API_KEY = "aSjbPA5w9gmRiTojIsOR1As4nwip8Ry6gxCNX7bfdxw="
+API_KEY=aSjbPA5w9gmRiTojIsOR1As4nwip8Ry6gxCNX7bfdxw=
